@@ -2036,11 +2036,12 @@ else
 	$SMARTY->display('header.html');
 	echo '<H1>'.trans('Generating random data').'</H1>';
 	echo '<form method="get" action="?" target="_blank">';
-	echo '<input type="hidden" value="genfake" name="m">';
+	echo '<input type="hidden" name="m" value="genfake">';
 	echo '<input type="submit" class="hiddenbtn">';
 	echo '<font class="alert bold">'.trans('WARNING! THIS WILL DELETE ALL DATA FROM DATABASE!!!').'</font><p>';
 	echo trans('How many customers? (max.65000):').' <input type="text" name="l" size="5"><br>';
-	echo trans('How many invoices for each customer? (max.100):').' <input type="text" name="i" size="5"></form>';
+	echo trans('How many invoices for each customer? (max.100):').' <input type="text" name="i" size="5">';
+	echo '<br><input type="submit" value="'.trans('Generate').'"></form>';
 	$SMARTY->display('footer.html');
 }
 
